--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^12.6.3",
     "i18next": "^23.4.4",
     "mapbox-gl": "^3.10.0",
-    "next": "^13.4.19",
+    "next": "^15.3.4",
     "next-intl": "^3.0.0-beta.9",
     "next-translate": "^2.5.3",
     "react": "18.2.0",
@@ -24,6 +24,7 @@
     "react-player": "^2.12.0",
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
+    "sharp": "^0.34.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
