--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.4.4",
     "mapbox-gl": "^3.10.0",
     "next": "^15.3.4",
